--- a/firmware_main/platformio.ini
+++ b/firmware_main/platformio.ini
@@ -7,7 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[env:168p16m]
+[env:main_168p16m]
 platform = atmelavr
 board = ATmega168
 framework = arduino
@@ -20,7 +20,7 @@ upload_flags =
   -P$UPLOAD_PORT
   -b$UPLOAD_SPEED
   -c$UPLOAD_PROTOCOL
-  -pm168
+  -pm328p
   -Ulfuse:w:0xFF:m
   -Uhfuse:w:0xD6:m
   -Uefuse:w:0xFD:m
