Use single platformio.ini for both MCUs

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,17 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+include_dir=firmware/include
+src_dir=firmware/src
+lib_dir=firmware/lib
+test_dir=firmware/test
+
 [env:main_168p16m]
 platform = atmelavr
 board = ATmega168
 framework = arduino
+src_filter = +<main_mcu>
 
 upload_protocol = stk500v2
 upload_speed = 115200
@@ -22,6 +29,28 @@ upload_flags =
   -c$UPLOAD_PROTOCOL
   -pm328p
   -Ulfuse:w:0xFF:m
+  -Uhfuse:w:0xD6:m
+  -Uefuse:w:0xFD:m
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+[env:radio_328p8m]
+platform = atmelavr
+board = ATmega328P
+framework = arduino
+src_filter = +<radio_mcu>
+
+board_build.f_cpu = 8000000L
+
+upload_protocol = stk500v2
+upload_speed = 115200
+upload_port = /dev/ttyACM0
+upload_flags =
+  -C$PROJECT_PACKAGES_DIR/tool-avrdude/avrdude.conf
+  -P$UPLOAD_PORT
+  -b$UPLOAD_SPEED
+  -c$UPLOAD_PROTOCOL
+  -pm168
+  -Ulfuse:w:0xE2:m
   -Uhfuse:w:0xD6:m
   -Uefuse:w:0xFD:m
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
