--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ board = ATmega168
 framework = arduino
 src_filter = +<main_mcu>
 
+board_build.f_cpu = 8000000L
+
 upload_protocol = stk500v2
 upload_speed = 115200
 upload_port = /dev/ttyACM0
@@ -27,8 +29,9 @@ upload_flags =
   -P$UPLOAD_PORT
   -b$UPLOAD_SPEED
   -c$UPLOAD_PROTOCOL
-  -pm328p
-  -Ulfuse:w:0xFF:m
+  -pm168
+  ; -Ulfuse:w:0xFF:m
+  -Ulfuse:w:0xE2:m
   -Uhfuse:w:0xD6:m
   -Uefuse:w:0xFD:m
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
@@ -49,7 +52,7 @@ upload_flags =
   -P$UPLOAD_PORT
   -b$UPLOAD_SPEED
   -c$UPLOAD_PROTOCOL
-  -pm168
+  -pm328p
   -Ulfuse:w:0xE2:m
   -Uhfuse:w:0xD6:m
   -Uefuse:w:0xFD:m
